--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,7 +3,6 @@
 <head th:fragments="head">
     <meta charset="UTF-8"/>
     <title th:text="${title}">TipOut</title>
-    <script th:src="@{script.js}"/>
     <link th:href="@{/styles.css}" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -14,8 +13,8 @@
     <h1 th:text="${title}">TipOut</h1>
     <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="/calculate">Calculate Tipout</a></li>
-        <li class="nav-item"><a class="nav-link" href="/current">Current Employees</a></li>
-        <li class="nav-item"><a class="nav-link" href="/add">Add Employees</a></li>
+        <li class="nav-item"><a class="nav-link" href="/employees/current">Current Employees</a></li>
+        <li class="nav-item"><a class="nav-link" href="/employees/add">Add Employees</a></li>
     </ul>
 </nav>
 
