Was able to start adding employees, need to figure out how they get to the right tables.

--- a/src/main/resources/templates/employees/add.html
+++ b/src/main/resources/templates/employees/add.html
@@ -31,7 +31,7 @@
                     ></option>
                 </select>
             </label>
-            <p class="error" th:errors="${employee.role}"></p>
+<!--            <p class="error" th:errors="${employee.role}"></p>-->
         </div>
 
         <div class="form-group">
