--- a/src/main/resources/templates/employees/add.html
+++ b/src/main/resources/templates/employees/add.html
@@ -24,9 +24,9 @@
         </div>
         <div class="form-group">
             <label>What is their role?
-                <select  th:field="${employee.role.role}" class="form-control">
+                <select  name="role" class="form-control">
                     <option th:each="position : ${employer.employees}"
-                    th:value="${position.getClass()}"
+                    th:value="${position.getClass().getSimpleName()}"
                     th:text="${position.getClass().getSimpleName()}"
                     ></option>
                 </select>
