--- a/src/main/resources/templates/employees/current.html
+++ b/src/main/resources/templates/employees/current.html
@@ -6,5 +6,25 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Last Name</th>
+        <th>Role</th>
+        <th>Edit</th>
+    </tr>
+    </thead>
+    <tr th:each="employee : ${currentEmployees}">
+        <td th:text="${employee.firstName}"></td>
+        <td th:text="${employee.lastName}"></td>
+        <td th:text="${employee.roleDetail}"></td>
+        <td>
+            <a th:href="@{/events/edit/{id}(id=${employee.id})}">Edit</a>
+        </td>
+
+    </tr>
+</table>
+
 </body>
 </html>
