Was able to submit a list to controller, need to figure out how to pass two more lists and clean up.

--- a/src/main/resources/templates/calculate/index.html
+++ b/src/main/resources/templates/calculate/index.html
@@ -22,7 +22,7 @@
             <div th:each="collector, itemStat:${tipCollectorsList}" th:object="${tipCollector}">
                 <label th:text="${collector.firstName+' '+collector.lastName}"></label>
                 <input type="text"
-                       th:field="*{[__${itemStat.index}__].tips}"
+                       th:field="*{tips[__${itemStat.index}__].tips}"
                        class="form-control">
             </div>
         </label>
