--- a/src/main/resources/templates/calculate/index.html
+++ b/src/main/resources/templates/calculate/index.html
@@ -6,6 +6,19 @@
 
 <nav th:replace="fragments :: navigation" ></nav>
 
+<!--Form to calculate tips.
+Split between those that collect tips and those that are added to the pool
+For those that collect tips adding a non-null value will include them in the tip pool
+For those that not collect dips, selecting their names will enter a default value of zero as their dips
+collected therefore adding them to the tip pool.
+
+I itemStat.index to iterate through an empty hashmap from the TipsCollected class. Because I
+divide the two kinds of employees, I add the list size from the part to the iterator in the second part,
+this is not as clean of a solution as I would like it to be.
+If Employees are included in the tip pool they have a none null Tips attached to them
+
+The form sends TipsCollected object to /calculate/report for further processing
+-->
 <form method="POST" action="/calculate/report"
       th:if="${tipCollectorsList.size()>0}"
       th:object="${tipCollector}">
@@ -26,11 +39,11 @@
         <label>
             <h3 >Add other employees to the Tippool</h3>
             <div th:each="notTipCollector, itemStat: ${notTipCollectorsList}">
-                <label th:text="${notTipCollector.firstName+' '+notTipCollector.lastName}"></label>
                     <input type="checkbox"
                            th:value="0"
                            th:field="*{tips[__${itemStat.index+1+tipCollectorsList.size()}__].tips}"
                     />
+                <label th:text="${notTipCollector.firstName+' '+notTipCollector.lastName}"></label>
                 <br>
             </div>
         </label>
@@ -39,9 +52,8 @@
         <input type="submit" value="Calculate Tips" class="btn btn-success">
     </div>
 </form>
-<h2 th:if="${tipCollectorsList.size()<1}">Add Employees That Collect Tips to Continue</h2>
+<!--Won't be able to see form if no employees have been added-->
+<h2 th:if="${tipCollectorsList.size()<1}">Add Employees That Collect Tips to Get Started</h2>
 </body>
 </html>
-
-<!--th:attr="onclick=|${tipCollector}.add(${notTipCollector})|"-->
 
