--- a/src/main/resources/templates/calculate/index.html
+++ b/src/main/resources/templates/calculate/index.html
@@ -20,40 +20,42 @@ If Employees are included in the tip pool they have a none null Tips attached to
 The form sends TipsCollected object to /calculate/report for further processing
 -->
 <form method="POST" action="/calculate/report"
-      th:if="${tipCollectorsList.size()>0}"
-      th:object="${tipCollector}">
-    <div>
-        <label>
-            <h3>Enter Tips</h3>
-            <div th:each="collector, itemStat:${tipCollectorsList}">
-                <label th:text="${collector.firstName+' '+collector.lastName}"></label>
-                <input type="number"
-                       th:field="*{employeeTipsMap[__${itemStat.index+1}__].tips}"
-                       class="form-control">
-            </div>
-        </label>
+          th:if="${moneyHandlers.size()>0}"
+          th:object="${collectTips}">
+        <div>
+            <label>
+                <h3>Enter Tips</h3>
+                <div th:each="moneyHandler, itemStat:${moneyHandlers}">
+                    <label th:text="${moneyHandler.firstName+' '+moneyHandler.lastName}"></label>
+                    <input type="number"
+                           th:field="*{moneyHandlerTipsMap[__${itemStat.index+1}__].tips}"
+                           class="form-control">
+                </div>
+            </label>
 
-    </div>
-    <br>
-    <div th:if="${notTipCollectorsList.size()>0}">
-        <label>
-            <h3 >Add other employees to the Tippool</h3>
-            <div th:each="notTipCollector, itemStat: ${notTipCollectorsList}">
+        </div>
+        <br>
+        <div th:if="${notMoneyHandlers.size()>0}">
+            <label>
+                <h3 >Add other employees to the Tippool</h3>
+                <div th:each="notMoneyHandler, itemStat: ${notMoneyHandlers}"
+                     th:field="*{notMoneyHandlerTipsMap[__${itemStat.index}__].tips}">
                     <input type="checkbox"
-                           th:value="0"
-                           th:field="*{employeeTipsMap[__${itemStat.index+1+tipCollectorsList.size()}__].tips}"
+                           value="0"
+                           th:field="*{notMoneyHandlerTipsMap[__${itemStat.index}__].tips}"
                     />
-                <label th:text="${notTipCollector.firstName+' '+notTipCollector.lastName}"></label>
-                <br>
-            </div>
-        </label>
-    </div>
-    <div>
-        <input type="submit" value="Calculate Tips" class="btn btn-success">
-    </div>
-</form>
-<!--Won't be able to see form if no employees have been added-->
-<h2 th:if="${tipCollectorsList.size()<1}">Add Employees That Collect Tips to Get Started</h2>
+                    <label th:text="${notMoneyHandler.firstName+' '+notMoneyHandler.lastName}"></label>
+                    <br>
+                </div>
+            </label>
+        </div>
+        <div>
+            <input type="submit" value="Calculate Tips" class="btn btn-success">
+        </div>
+    </form>
+    <!--Won't be able to see form if no employees have been added-->
+    <h2 th:if="${moneyHandlers.size()<1}">Add Employees That Collect Tips to Get Started</h2>
 </body>
 </html>
+
 
