--- a/src/main/resources/templates/calculate/report.html
+++ b/src/main/resources/templates/calculate/report.html
@@ -8,5 +8,18 @@
 
 <h2 th:text="${'Total tip pool $'+tippool}"></h2>
 
+<table class="table table-striped">
+    <thead>Tip Distribution</thead>
+    <tr>
+        <th>Employee</th>
+        <th>Money Owed</th>
+    </tr>
+    <tr th:each="employeeTippedOut : ${payouts}">
+        <td th:text="${employeeTippedOut.key.getFirstName()}+' '+${employeeTippedOut.key.getLastName()}"></td>
+        <td th:text="${employeeTippedOut.value}"></td>
+    </tr>
+
+</table>
+
 </body>
 </html>
