Archive working, will give an option to archive on delete confirmation screen as well as the option to go back, after that will work out how to adjust tip rates

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,6 +15,7 @@
         <li class="nav-item"><a class="nav-link" href="/calculate">Calculate Tipout</a></li>
         <li class="nav-item"><a class="nav-link" href="/employees/current">Current Employees</a></li>
         <li class="nav-item"><a class="nav-link" href="/employees/add">Add Employees</a></li>
+        <li class="nav-item"><a class="nav-link" href="/settings">Settings</a></li>
     </ul>
 </nav>
 
