Gave an option to archive on delete confirmation screen as well as the option to go back, added error handling for no tip submission. Now will work out how to adjust tip rates, will follow that up with resigning employee roles.

--- a/src/main/resources/templates/calculate/index.html
+++ b/src/main/resources/templates/calculate/index.html
@@ -20,6 +20,9 @@ If Employees are included in the tip pool they have a none null Tips attached to
 The form sends TipsCollected object to /calculate/report for further processing
 -->
 
+<div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
+</div>
+
 <form method="POST" action="/calculate/report"
         th:if="${collectTips.moneyHandlerTipsMap.size()>0}"
       >
