--- a/src/main/resources/templates/settings/tipDistribution.html
+++ b/src/main/resources/templates/settings/tipDistribution.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
+<head th:replace="fragments :: head">
 </head>
-<body>
+<body class="container">
+
+<nav th:replace="fragments :: navigation"></nav>
+
+<form method="post" >
+    <div class="form-group" th:each="position : ${employer.employees}">
+        <label th:text="${position.getClass().getSimpleName()}"></label>
+<!--        <p class="error" th:errors="${employeeToEdit.firstName}"></p>-->
+        <input type="number"
+               th:value="${position.percentOfTipOut}"
+               class="form-control"/>
+    </div>
+    <br>
+    <div class="form-group">
+        <input type="submit" value="Update Tipout Distribution" class="btn btn-warning">
+    </div>
+</form>
 
 </body>
 </html>
