--- a/src/main/resources/templates/settings/tipDistribution.html
+++ b/src/main/resources/templates/settings/tipDistribution.html
@@ -9,16 +9,17 @@
 <form method="post" >
     <div class="form-group" th:each="position : ${employer.employees}">
         <label th:text="${position.getClass().getSimpleName()}"></label>
-<!--        <p class="error" th:errors="${employeeToEdit.firstName}"></p>-->
         <input type="number"
                th:value="${position.percentOfTipOut}"
                class="form-control"/>
+<!--        <p class="error" th:errors="${position.percentOfTipOut}"></p>-->
     </div>
     <br>
     <div class="form-group">
         <input type="submit" value="Update Tipout Distribution" class="btn btn-warning">
     </div>
 </form>
+<br>
 
 </body>
 </html>
