Was able to get the form read in the post controller, now to getting it saved a persistent

--- a/src/main/resources/templates/settings/tipDistribution.html
+++ b/src/main/resources/templates/settings/tipDistribution.html
@@ -6,15 +6,20 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post">
+<form method="post" th:object="${employeeDTO}">
     <div class="form-group" th:each="position : ${employeeDTO.employees}" >
         <label th:text="${position.getClass().getSimpleName()}"></label>
-        <input type="hidden" th:field="${position.setPercentOfTipout()}">
         <input type="number"
-               th:name="${position}"
-               th:value="${position.percentOfTipout}"
+               th:field="*{__${position.getClass().getSimpleName()}__.percentOfTipout}"
                class="form-control"/>
 <!--        <p class="error" th:errors="${position.percentOfTipOut}"></p>-->
+    </div>
+
+<!--        <label th:text="${employeeDTO.bartender.getClass().getSimpleName()}"></label>-->
+<!--        <input type="number"-->
+<!--               th:field="*{BOH.percentOfTipout}"-->
+<!--               class="form-control"/>-->
+        <!--        <p class="error" th:errors="${position.percentOfTipOut}"></p>-->
     </div>
     <br>
     <div class="form-group">
