Was able to resolve two issues with the calculator side of things, first I moved away from a static Tipout class because information persisted in a way that was not helpful, Next I refactored how a tipout is calculated so that a portion  of tip is divided by all the rates in the tip pool and not just the distinct ones.

--- a/src/main/resources/templates/calculate/index.html
+++ b/src/main/resources/templates/calculate/index.html
@@ -30,7 +30,7 @@ The form sends TipsCollected object to /calculate/report for further processing
             <label>
                 <h3>Enter Tips</h3>
                 <div th:each="moneyHandler : ${moneyHandlers}">
-                    <label th:text="${moneyHandler.firstName+' '+moneyHandler.lastName}"></label>
+                    <label th:text="${moneyHandler}"></label>
                     <input type="number"
                            th:field="${collectTips.moneyHandlerTipsMap[__${moneyHandler.id}__].tips}"
                            class="form-control">
@@ -47,7 +47,7 @@ The form sends TipsCollected object to /calculate/report for further processing
                            value="0"
                            th:field="${collectTips.nonMoneyHandlerTipsMap[__${nonMoneyHandler.id}__].tips}"
                         />
-                    <label th:text="${nonMoneyHandler.firstName+' '+nonMoneyHandler.lastName}"></label>
+                    <label th:text="${nonMoneyHandler}"></label>
                     <br>
                 </div>
             </label>
