--- a/src/main/resources/templates/employees/edit.html
+++ b/src/main/resources/templates/employees/edit.html
@@ -40,15 +40,18 @@
 <!--        </div>-->
         <br>
         <div class="form-group">
+            <input type="hidden" th:value="${false}" name="archive">
             <input type="submit" th:value="'Edit '+${employeeToEdit}" class="btn btn-warning">
-            <br>
-            <br>
-            <br>
+
+    </form>
+    <br>
+    <br>
+    <br>
+    <form method="post" th:action="@{/employees/edit/{employeeToEditId}(employeeToEditId=${employeeToEditId})}">
+        <div class="form-group">
+            <input type="hidden" th:value="${true}" name="archive">
+            <input type="submit" th:value="'Archive '+${employeeToEdit}" class="btn btn-danger">
         </div>
-            <div class="form-group">
-                <input type="hidden" th:value="${true}" name="archive">
-                <input type="submit" th:value="'Archive '+${employeeToEdit}" class="btn btn-danger">
-            </div>
     </form>
 </div>
 
