--- a/src/main/resources/templates/employees/add.html
+++ b/src/main/resources/templates/employees/add.html
@@ -25,9 +25,9 @@
         <div class="form-group">
             <label>What is their role?
                 <select  name="role" class="form-control">
-                    <option th:each="position : ${employer.employees}"
-                    th:value="${position.getClass().getSimpleName()}"
-                    th:text="${position.getClass().getSimpleName()}"
+                    <option th:each="position : ${employeeTypes.employees}"
+                    th:value="${position.roleDetail}"
+                    th:text="${position.roleDetail}"
                     ></option>
                 </select>
             </label>
