--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,8 +4,7 @@
 </head>
 <body class="container">
 
-<nav th:replace="fragments :: navigation"></nav>
-
+<h1 th:replace="fragments :: title"></h1>
 <form method="post">
     <div class="form-group">
         <label th:for="username">Username
