Did some cleaning and added validation to tip distribution

--- a/src/main/resources/templates/employees/edit.html
+++ b/src/main/resources/templates/employees/edit.html
@@ -42,7 +42,7 @@
         <div class="form-group">
             <input type="hidden" th:value="${false}" name="archive">
             <input type="submit" th:value="'Edit '+${employeeToEdit}" class="btn btn-warning">
-
+        </div>
     </form>
     <br>
     <br>
