--- a/src/main/resources/templates/settings/tipDistribution.html
+++ b/src/main/resources/templates/settings/tipDistribution.html
@@ -6,13 +6,17 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post" th:object="${employeeRates}">
+<div class="alert alert-success" role="alert" th:if="${success}">
+    Employee Tip Rates Edited Successfully
+</div>
+
+<form method="post" th:object="${employeeTipRates}">
     <div class="form-group" th:each="type : ${employeeTypes}" >
         <label th:text="${type}"></label>
         <input type="number"
                th:field="*{__${type}__Rate}"
                class="form-control"/>
-<!--        <p class="error" th:errors="${position.percentOfTipOut}"></p>-->
+        <p class="alert alert-warning" th:errors="*{__${type}__Rate}"></p>
     </div>
     <br>
     <div class="form-group">
