--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
 </head>
 <body class="container">
 
+<h3 class="text-center d-inline-flex p-2">An app to calculate end of shift distribution of tips collected and distributed by a restaurant employer.</h3>
+
 <div th:if="${!loggedin}">
     <h1  th:replace="fragments :: title"></h1>
     <p>Have an account? <a href="/login">Login</a></p>
